# frost-master

./: .gitignore  .prettierrc  NGINX_REDIRECT.md  index.html  nginx.conf  package-lock.json  prerender.mjs
backend/: database.db  pyproject.toml
backend/app/: main.py  security.py
backend/app/api/routes/: callback_requests.py  client_info.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  callback_request.py  client_info.py
backend/app/schemas/: callback_request.py  client_info.py
backend/app/services/: telegram.py
backend/app/utils/: get_client_ip.py  limiter.py  parse_user_agent.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  prerender.mjs  vite.config.js
frontend/public/: robots.txt  site.webmanifest  sitemap.xml  yandex_196ea4b11cfdba4c.html
frontend/src/: App.jsx  entry-server.jsx  index.css
frontend/src/components/: Navbar_back.jsx  ParticlesWrapper.jsx
frontend/src/config/: benefits.js  brands.js  faqItems.js  features.js  generalData.js  geoPages.js  guarantees.js  heroStats.js  navItems.js  particlesConfig.js  prices.js  repairTags.js  services.js  siteConfig.js  steps.js
frontend/src/general/: Layout.jsx  RoutePaths.jsx  Router.jsx  routePaths.js
frontend/src/hooks/: useActiveSection.js  useElementHeight.js  useInViewOnce.js  (+3 more)
public/: sitemap.xml
src/: index.css  main.jsx
src/config/: geoPages.js  navItems.js  siteConfig.js
src/general/: Router.jsx
src/hooks/: useActiveSection.js  useElementHeight.js
src/pages/: RepairAdygea.jsx  RepairKrasnodar.jsx
(+80 files in other folders)
