[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "user-agents>=2.2.0",
    "uvicorn>=0.38.0",
]
